# template

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  package-lock.json  package.json  pyproject.toml  stylelint.config.cjs
.github/workflows/: ci.yml
dashboard/: README.md  main.py  run.py
dashboard/static/css/: style.css
dashboard/static/js/: dashboard.js
dashboard/templates/: dashboard.html
