[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-dashboard"
version = "1.0.0"
description = "A simple FastAPI dashboard template"
authors = [
    {name = "Template Author", email = "author@example.com"}
]
readme = "dashboard/README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/example/template-dashboard"
Repository = "https://github.com/example/template-dashboard"
Issues = "https://github.com/example/template-dashboard/issues"

[project.scripts]
dashboard = "dashboard.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dashboard*"]

[tool.setuptools.package-data]
dashboard = ["static/**/*", "templates/**/*"]